k8s/payments.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: payments
  name: payments-service
spec:
  ports:
    - name: "4201"
      port: 4201
      targetPort: 3000
  selector:
    io.kompose.service: payments
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: payments
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: payments
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.service: payments
    spec:
      containers:
        - env:
            - name: REDIS_HOST
              value: redis
          image: orders-and-payments/payments:latest
          imagePullPolicy: Never
          name: payments
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
